# PPLAN

./: .gitignore  cel_aplikacji.md
app/: README.md  docker-compose.yml
app/backend/: .env.example  alembic.ini  pyproject.toml
app/backend/alembic/: env.py  script.py.mako
app/backend/alembic/versions/: 20260226_0001_initial_schema.py  20260226_0002_phase1_access_constraints.py
app/backend/app/: __init__.py  main.py
app/backend/app/api/: __init__.py  router.py
app/backend/app/api/routes/: access.py  admin.py  dashboards.py  exports.py  finance.py  health.py  matrix.py  me.py  projects.py  reports.py
app/backend/app/core/: __init__.py  auth.py  config.py
app/backend/app/db/: base.py  dependencies.py  session.py
app/backend/app/models/: __init__.py  entities.py
app/backend/app/repositories/: __init__.py  planning_repository.py
app/backend/app/services/: finance_reporting_service.py  planning_service.py
app/backend/pplan_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
app/backend/tests/: conftest.py  test_access_admin_phase1.py  test_auth_rbac_helpers.py  test_finance_reports_dashboards_phase3.py  test_health.py  test_planning_matrix_phase2.py
app/frontend/: .env.example  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo
app/frontend/src/: main.tsx  styles.css
app/frontend/src/app/: navigation.ts  routePaths.ts  router.tsx  shell.tsx
app/frontend/src/test/: feature.api-clients.test.ts  smoke.test.ts  (+3 more)
app/infra/apache/: pplan.conf
app/plans/: v1-delivery-plan.md
dev/: make_dev_user_super_admin.sql
(+25 files in other folders)
